--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
-    "@types/react-native-restart": "^0.0.14",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-restart": "^0.0.22"
@@ -23,6 +22,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
     "@types/react-native": "^0.66.1",
+    "@types/react-native-restart": "0.0.14",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.3.1",
     "eslint": "^8.1.0",
@@ -32,6 +32,7 @@
     "typescript": "^4.4.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "collectCoverage":true
   }
 }
