--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
     "@types/react-native": "^0.66.1",
-    "@types/react-native-restart": "0.0.14",
+    "@types/react-native-restart": "^0.0.14",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.3.1",
     "eslint": "^8.1.0",
@@ -33,6 +33,6 @@
   },
   "jest": {
     "preset": "react-native",
-    "collectCoverage":true
+    "collectCoverage": true
   }
 }
